<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:padding="16dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="220dp"
        android:layout_height="53dp"


        android:text="Name"
        android:textSize="14sp"

        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-19dp" />

    <Button
        android:id="@+id/details"
        android:layout_width="80dp"
        android:layout_height="34dp"
        android:layout_marginEnd="12dp"
        android:text="Details"

        android:textSize="10sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toStartOf="@+id/leave"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/leave"
        android:layout_width="80dp"
        android:layout_height="34dp"
        android:text="Leave"

        android:textSize="10sp"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="190dp"
        tools:layout_editor_absoluteY="-10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>